{
  "appName": "Odoo Mobile App",
  "viewAll": "View All",
  "newLabel": "New",
  "profile": "Profile",
  "home": "Home",
  "cart": "Cart",
  "search": "Search",
  "categories": "Categories",
  "topProducts": "Top Products",
  "offers": "Offers For You",
  "reachedBottom": "You have just reached to the bottom of page.",
  "backToTop": "BACK TO TOP",
  "products": "Products",
  "featureCategories": "Featured Categories",
  "quantity": "Quantity",
  "buyNow": "BUY NOW",
  "addToCart": "ADD TO CART",
  "unit": "Unit",
  "units": "Units",
  "size": "SIZE*",
  "color": "COLOR*",
  "wishList": "Wishlist",
  "compare": "COMPARE",
  "share": "SHARE",
  "details": "Details",
  "moreInformation": "More Information",
  "reviews": "Reviews",
  "noReview": "No Review Yet",
  "addReview": "ADD YOUR REVIEW",
  "inStock": "In Stock",
  "only": "Only",
  "left": "Left",
  "basedOn": "Based on",
  "1": "1",
  "2": "2",
  "3": "3",
  "4": "4",
  "5": "5",
  "amountToBePaid": "Amt. to be paid",
  "proceed": "Proceed",
  "items": "Item(s)",
  "removeItem": "remove Item",
  "subtotal": "Subtotal",
  "moveToWishlist": "Wishlist",
  "emptyCart": "Empty Cart",
  "continueShopping": "CONTINUE SHOPPING",
  "priceDetails": "Price Details",
  "totalProducts": "Total Products",
  "tax": "Tax",
  "orderTotal": "Order Total",
  "enterQuantity": "Enter quantity",
  "ok": "Ok",
  "save": "Save",
  "doYouReallyWantToDelete": "Do you really want to delete?",
  "alternateProducts": "Alternate Products",
  "signInOrRegister": "Sign In or Register",
  "useEmailAddress": "USE EMAIL ADDRESS",
  "signInWithEmail": "Sign In With Email",
  "createAnAccount": "Create An Account",
  "odooMobileApp": "Odoo Mobile App",
  "signIn": "Sign In",
  "or": "OR",
  "forgetPassword": "Forgot Password?",
  "emailAddress": "Email Address",
  "password": "Password",
  "email": "Email",
  "shipping": "Shipping",
  "checkout": "Checkout",
  "selectRating": "Select Rating",
  "noItemsInCart": "You have no items in cart.",
  "logOut": "Log Out",
  "confirmPassword": "Confirm Password",
  "passwordNotMatch": "Password should be same as above",
  "forgotPasswordTitle": "Forgot your password?",
  "invalidEmail": "Please enter a valid email address",
  "forgotPasswordMessage": "Please enter your email address below. You will receive a link to reset your password.",
  "cancel": "Cancel",
  "name": "Name",
  "alreadyAccount": "Already have an account? ",
  "loadingMessage": "Please wait...",
  "addReviews": "Add Review",
  "rating": "Rating",
  "submit": "Submit",
  "WriteReviewTitle": "Write Review Title",
  "Writeyourreview": "Write your review",
  "addNewAddress": "Add New Address",
  "contactInformation": "Contact Information",
  "contactUs": "Contact Us",
  "yourName": "Your Name",
  "telephone": "Telephone",
  "address": "Address",
  "city": "City",
  "state": "State",
  "zipCode": "Zip/Postal Code",
  "saveAddress": "Save Address",
  "addressBook": "Address Book",
  "defaultBillingAddress": "Default Billing Address",
  "defaultShippingAddress": "Default Shipping Address",
  "newAddress": "New Address",
  "changeAddress": "Change Address",
  "shippingMethod": "Shipping Method",
  "shippingAddress": "Shipping Address",
  "otherAddresses": "Other Addresses",
  "reviewPayments": "Review and Payments",
  "sameAsShippingAddress": "Same as Shipping Address",
  "dashboard": "Dashboard",
  "accountInfo": "Account Info",
  "allOrders": "All Orders",
  "myWishlist": "My Wishlist",
  "signOut": "Sign Out",
  "language": "Languages",
  "currency": "Currency",
  "setting": "Settings",
  "required": "*Required",
  "editAddress": "Edit Address",
  "placeOrder": "PLACE ORDER",
  "country": "Country",
  "shippingInfo": "SHIPPING INFO",
  "myOrder": "My Orders",
  "reorder": "Reorder",
  "itemOrdered": "Items Ordered",
  "billingAddress": "Billing Address",
  "moveToCart": "MOVE TO CART",
  "thanksForPurchase": "Thank you for your purchase!",
  "yourOrderIs": "Your order is:  ",
  "moveToWishlistText": "This item will be moved to your wish list.",
  "deleteItemFromCart": "This item will be removed from your cart.",
  "emptyCartText": "All the products from your cart will be removed.",
  "paymentMethods": "PAYMENT METHODS",
  "orderSummary": "ORDER SUMMARY",
  "order#": "Order #",
  "placedOn": "Placed On",
  "price_": "Price:",
  "qty": "Qty:",
  "noItems": "NO ITEMS",
  "noItemsInWishlist": "You didn't added anything to wishlist yet.",
  "removeItemFromWishlist": "This item will be removed from your wishlist.",
  "chooseProduct": "Choose A Product To Review",
  "edit": "Edit",
  "remove": "Remove",
  "doYouWantToDeleteThisItem": "Do you want to delete this item?",
  "unitPrice": "Unit Price",
  "totalPrice": "Total Price",
  "grandTotal": "Grand Total",
  "price": "Price",
  "writeAReview": "Write a Review",
  "itemsOrdered": "item(s) ordered",
  "signInToContinue": "Sign in to continue.",
  "shippingPaymentInfo": "Shipping Payment Info",
  "subCategories": "Sub Categories",
  "notifications": "Notifications",
  "darkMode": "Dark Mode",
  "privacyPolicy": "Privacy Policy",
  "manageDeviceSettings": "Manage in Device's Settings",
  "gotoWishlist": "Go To Wishlist",
  "noOrder": "No order placed!",
  "changePassword": "Change Password",
  "enterPassword": "Enter Password",
  "enterConfirmPassword": "Enter Confirm Password",
  "deactivate": "Deactivate",
  "deactivateTemporary": "Deactivate Temporary",
  "deactivatePermanent": "Deactivate Permanent",
  "deactivateTitle": "Deactivate your account Temporary/Permanent",
  "downloadAllInformation": "Download All Information",
  "newPassword": "New Password",
  "deactivateTemporaryDialog": "Do you want to deactivate your account temporary ?",
  "deactivatePermanentDialog": "Do you want to deactivate your account permanent ?",
  "account": "Account",
  "manageAddress": "Manage Address",
  "download": "Download",
  "recentOrder": "Recent Order",
  "verificationTitle": "Your email is not verified yet. To verify, click the RESEND VERIFICATION LINK button  and the verification email will be sent to your email address.",
  "resendLink": "Resend Verification Link",
  "noAddress": "No Address Found",
  "emptyNotification": "You don't have any notification !",
  "relatedProduct": "Related Product",
  "noResult": "No Result found",
  "uploadBannerImage": "Upload Banner Image",
  "addImage": "Add Image",
  "deleteImage": "Delete Image",
  "uploadProfileImage": "Upload Profile Image",
  "gallery": "Gallery",
  "camera": "Camera",
  "fingerprintLogin": "Fingerprint Login",
  "fingerprintLoginDialog": "Do you want to set these credentials for fingerprint login?",
  "authenticationFailed": "Authentication Failed",
  "authenticationUnable": "Unable to authenticate",
  "hello": "Hello",
  "searchLocation": "Search for a location",
  "selectLocation": "Select this Location",
  "updateShoppingCart": "Update Shopping Cart",
  "noOrderMessage": "You have not placed any order with us yet.",
  "noAddressMessage": "You didn't added any of your addresses yet.",
  "text": "Text",
  "image": "Image",
  "delete": "Delete",
  "pleaseVerifyYourEmail": "Please verify your email",
  "pleaseSelectAddressOrShipping": "Please select address or shipping",
  "searchByScanning": "Search by scanning",
  "listening": "Listening...",
  "requiredLocationPermission": "We will use the location permission to fetch the user current location.",
  "provideLocationPermission": "Please check the app setting and provide the location permission",
  "userYourLocation": "Use your location",
  "streetAddress": "Street Address",
  "sellerDashboard": "Seller Dashboard",
  "sellerProfile": "Seller Profile",
  "sellerOrder": "Seller Order",
  "askToAdmin": "Ask To Admin",
  "marketplace": "MarketPlace",
  "subject": "Subject",
  "comment": "Comment",
  "ask": "Ask",
  "new": "New",
  "approved": "Approved",
  "orders": "Orders",
  "shipped": "Shipped",
  "pending": "Pending",
  "rejected": "Rejected",
  "requested": "Requested",
  "payments": "Payments",
  "customer": "Customer",
  "product": "Product",
  "status": "Status",
  "sellerProduct": "Seller Product",
  "becomeASeller": "Become A Seller",
  "topSellers": "Top Sellers",
  "aboutSeller": "About Seller",
  "ratingAndReview": "Rating And Review",
  "shippingPolicy": "Shipping Policy",
  "returnPolicy": " Return Policy",
  "recentlyAddedProducts": "Recently Added Products",
  "title": "Title",
  "youAreReviewing": "You're Reviewing",
  "agreeTermAndCondition": "I Accept Terms & Conditions",
  "sellerOption": "Do you want to become seller/vendor?",
  "acceptTermAndCondition": "Please Accept Term & Condition",
  "viewTerms": "View Terms and Conditions",
  "profileUrl": "Profile Url",
  "register": "Register",
  "noProductMessage": "No Products Still added by the seller",
  "signOutAlert": "Are you sure, You want to sign out? ",
  "odooMarketPlaceApp": "Odoo MOBIKUL MARKETPLACE",
  "deleteAccount": "Delete Account",
  "deleteAccountWarningStartMsg": "Deleting your account will result in removing all the data of your account associated with",
  "deleteAccountWarningEndMsg": "from our services. This action can't be undone.",
  "deleteAccountAlert": "Are you sure you want to delete your account?",
  "dontHavePermission": "You don't have a permission to delete the demo account",
  "invalidPassword": "Invalid Password",
  "emailRequired": "Email is required",
  "passwordRequired": "Password is required",
  "invalidPasswordMessage": "Password must have at least 8 characters including letters, and numbers and Leading or trailing spaces will be ignored.",
  "validEmail": "Please enter a valid email",
  "recentlyViewed": "All Products",
  "noProductFound": "No Product Found",
  "noOrderFount": "No Order Found",
  "accessDenied": "Access Denied",
  "noAction": "You don't have permission to perform this action.",
  "changeBillingAddress": "Change Billing Address",
  "changeShippingAddress": "Change Shipping Address",
  "noCategoryData": "No category data found",
  "addToCartDescription": "Adding to Cart. \nPlease wait",
  "connectWithWatch": "Connect with Watch",
  "continue": "Continue",
  "skip": "Skip",
  "showLess": "Show Less",
  "showMore": "Show More",
  "compareProduct": "Compare Product",
  "description": "Description",
  "sku": "Sku",
  "noItemsInCompare": "You didn't added anything to compare yet.",
  "removeItemsInCompare": "Item removed successfully to compare list",
  "addedItemsInCompare": "Item added successfully to compare list",
  "alreadyItemsInCompare": "Item is already added to compare list",
  "removeAllItemsInCompare": "All items removed successfully",
  "removeAllItems": "Remove All items",
  "checkoutAsGuest": "Checkout As Guest",
  "registerAndCheckout": "Register And Checkout",
  "checkoutAs": "checkout As",
  "addAddress": "Add Address",
  "companyName": "Company Name",
  "vatNumber": "TIN/VAT",
  "deliveryDetails": "Delivery Details",
  "trackOrder": "Track Order",
  "passwordValidation": "The old password does not match",
  "deleteAddressAlert": "Are you sure you want to delete Address?",
  "downloadInvoices": "Download Invoices",
  "downloading": "Downloading",
  "download_complete": "Download completed",
  "mergeCartMsg": "You have some items in your cart.\nPlease choose one of the option!",
  "mergeCart": "Merge with existing cart",
  "emptyOldCart": "Use new cart",
  "emptyOldCartSubtitle": "Your current cart will be deleted & new cart will be used.",
  "alert": "Alert",
  "list": "List",
  "grid": "Grid",
  "sort": "Sort",
  "filter": "Filter",
  "applyFilter": "Apply Filter",
  "apply": "Apply",
  "filterBy": "Filter By",
  "resetFilter": "Reset Filter",
  "suggestedItems": "Suggested Items",
  "couponCode": "Discount code or gift card",
  "couponCodeWarningMsg": "Please enter a discount code or gift card",
  "productSearch": "Search by keyword and product ",
  "applyCouponCode": "You have successfully applied the following code:",
  "updateAvailable": "Update Available",
  "update": "Update",
  "later": "Later",
  "updateAvailableMessage": "A new version of the app is available!\n",
  "updateNow": "\nwould you like to update it now?",
  "noInternetConnection": "No Internet Connection",
  "cameraPermission": "Waiting for camera permission...",
  "recentSearch": "Recent Search",
  "clearAll": "Clear All",
  "specifications": "Specifications"
}

