...
  }

  //======This will use to filter data from current location========//
  void filterSelectedCountryState(String? country, String? state) {
    print("dadsa--$country----$state");
    // if(state?.toLowerCase() == "up"){
    //   state = "Uttar Pradesh";
    // }
    if (_countryListModel?.countries != null) {
      for (Countries cou in _countryListModel?.countries ?? []) {
        if (cou.name?.toLowerCase() == country?.toLowerCase()) {
          print("dadsa--Country Found----");
          selectedCountryId = cou.id;
...
