...
                      width: 20,
                      decoration: BoxDecoration(
                          borderRadius: BorderRadius.circular(20.0),
                        color: AppColors.gray.withOpacity(0.5)
                          ),
                      child: Semantics(
                        identifier: 'wishlist_delete_icon',
                        child: const Icon(
                          Icons.close,
                          size: 17,
                        ),
                      ),
                    ),
...
