...
        actions: [
          IconButton(
            onPressed: () {
              Navigator.pushNamed(context, searchPage);
            },
            icon: Semantics(
              identifier: 'search_icon',
              child: const Icon(Icons.search, color: Colors.green),
            ),
          ),
          IconButton(
            onPressed: () {
              Navigator.pushNamed(context, wishlist);
...
