...
//                     Navigator.pushNamed(context, loginSignup, arguments: false);
//                   },
//                 );
//               }
//             },
//             icon: Semantics(
//               identifier: 'product-cart',
//               child: BadgeIcon(icon: Icon(Icons.shopping_cart)),
//             ),
//           ),
//         ],
//       ),
//       body: Stack(
...
